--- a/styles.css
+++ b/styles.css
@@ -77,8 +77,7 @@ body {
   color: black;
 }
 
-.navigation__item.is-active .dropdown-list,
-.navigation__item:hover .dropdown-list {
+.navigation__item.is-active .dropdown-list {
   display: block;
   padding: 0.5em 0;
   min-width: 15ch;
