--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,9 @@ body {
   font-family: inherit;
   min-width: 15ch;
   padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .navigation__btn::after {
